# dbIDE

./: .gitignore  model  readme.md  thoughts  webhaskell
as-browser/: .gitignore  LICENSE  as-browser.cabal
as-browser/data/: Data.Aeson.html
as-browser/exe/: Main.hs
as-browser/integration/: as-browser-integration.hs
as-browser/integration/Language/Haskell/ASBrowser/: TestHarness.hs
as-browser/integration/Language/Haskell/ASBrowser/Integration/: CabalTest.hs
as-browser/resources/: bower.json  index.html
as-browser/resources/elements/: nav_decl.html  nav_element.html  nav_module.html  nav_package.html  navigator.html  search.html
as-browser/resources/style/: as-browser.css  haskell.font.css
as-browser/src/Language/Haskell/: AsBrowser.hs
as-browser/src/Language/Haskell/ASBrowser/: Database.hs  Types.hs  Utils.hs
as-browser/src/Language/Haskell/ASBrowser/Integration/: Cabal.hs  Files.hs  Src.hs
as-browser/src/Language/Haskell/ASBrowser/Operations/: Components.hs  Decls.hs  Modules.hs  Packages.hs
as-browser/test/: as-browser-test.hs
as-browser/test/Language/Haskell/ASBrowser/: TestHarness.hs  TypesTest.hs  UtilsTest.hs
as-browser/test/Language/Haskell/ASBrowser/Integration/: CabalTest.hs  FilesTest.hs  SrcTest.hs
as-browser/test/Language/Haskell/ASBrowser/Operations/: ComponentsTest.hs  DeclsTest.hs  ModulesTest.hs  PackagesTest.hs
ghci-lib/: .gitignore  LICENSE  README  ghci-lib.cabal
ghci-lib/src/Language/Haskell/: GhciLib.hs
ghci-lib/src/Language/Haskell/Ghci/: Parser.hs  Types.hs  Utils.hs
ghci-lib/test/: ghci_lib_test.hs
ghci-lib/test/Language/Haskell/Ghci/: HighLevelTests.hs  ParserTest.hs  UtilsTest.hs
hwide/: .gitignore  HACKING  Setup.hs  hwide.cabal  hwide.yaml.sample  readme.md
hwide/exe/: Main.hs
hwide/src/: Main.hs
hwide/src/Language/Haskell/HWide/: Cabal.hs  Cache.hs  Config.hs  FileBrowser.hs  FileList.hs  Files.hs  GHCi.hs  Notes.hs  Util.hs
hwide/src/Language/Haskell/HWide/Internal/: UniqueQueue.hs
hwide/src/Language/Haskell/HWide/UI/: FileBrowser.hs  FileList.hs  NoteList.hs  PopupPane.hs  UIUtils.hs
hwide/test/: hwide-test.hs
hwide/test/Language/Haskell/HWide/: CabalTest.hs  TestUtil.hs
hwide/wwwroot/: index.html
hwide/wwwroot/css/: hwide.css
hwide/wwwroot/js/: .gitignore  hwide.js
reload/: reload.cabal
reload/app/: Main.hs
reload/src/Language/Haskell/: Reload.hs
reload/src/Language/Haskell/Reload/: Build.hs  FileBrowser.hs
reload/test/Language/Haskell/: ReloadSpec.hs
reload/test/Language/Haskell/Reload/: FileBrowserSpec.hs
reload/web/: bower.json  index.html
reload/web/src/: build-status.html  file-actions.html  file-browser.html  file-editor.html  my-app.html
