name:           as-browser
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         jpmoresmau

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   directory,
                   filepath,
                   safecopy,
                   acid-state,
                   ixset,
                   text,
                   Cabal,
                   time,
                   data-default,
                   mtl,
                   conduit,
                   conduit-extra,
                   http-conduit,
                   bytestring,
                   zlib,
                   tar,
                   utf8-string,
                   parallel-io,
                   containers,
                   aeson
  ghc-options:     -Wall -O2
  other-modules:   
                   Language.Haskell.ASBrowser.Types,
                   Language.Haskell.ASBrowser.Operations.Packages,
                   Language.Haskell.ASBrowser.Utils,
                   Language.Haskell.ASBrowser.Database,
                   Language.Haskell.ASBrowser.Operations.Modules,
                   Language.Haskell.ASBrowser.Integration.Cabal,
                   Language.Haskell.ASBrowser.Integration.Files,
                   Language.Haskell.ASBrowser.Operations.Components
  exposed-modules: Language.Haskell.AsBrowser

executable as-browser
  hs-source-dirs:  exe
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   as-browser,
                   directory,
                   filepath,
                   safecopy,
                   acid-state,
                   ixset,
                   text,
                   Cabal,
                   time,
                   data-default,
                   mtl,
                   conduit,
                   conduit-extra,
                   http-conduit,
                   bytestring,
                   zlib,
                   tar,
                   utf8-string,
                   parallel-io,
                   containers,
                   aeson,
                   snap-core,
                   snap-server,
                   snaplet-acid-state,
                   snap,
                   lens,
                   transformers
  ghc-options:     -Wall -rtsopts -threaded -O2

test-suite as-browser-test
  type:            exitcode-stdio-1.0
  main-is:         as-browser-test.hs
  ghc-options:     -Wall -rtsopts -threaded -O2
  build-depends:   
                   base >= 4,
                   tasty > 0.10,
                   tasty-hunit,
                   tasty-quickcheck,
                   QuickCheck,
                   quickcheck-instances,
                   HUnit,
                   Cabal,
                   acid-state,
                   ixset,
                   safecopy,
                   text,
                   time,
                   data-default,
                   directory,
                   filepath,
                   conduit,
                   conduit-extra,
                   http-conduit,
                   bytestring,
                   mtl,
                   zlib,
                   tar,
                   utf8-string,
                   parallel-io,
                   containers,
                   aeson,
                   attoparsec
  other-modules:   
                  Language.Haskell.ASBrowser.Operations.Packages,
                  Language.Haskell.ASBrowser.Operations.PackagesTest,
                  Language.Haskell.ASBrowser.Utils,
                  Language.Haskell.ASBrowser.UtilsTest,
                  Language.Haskell.ASBrowser.Database,
                  Language.Haskell.ASBrowser.Operations.Modules,
                  Language.Haskell.ASBrowser.Operations.ModulesTest,
                  Language.Haskell.ASBrowser.Integration.Cabal,
                  Language.Haskell.ASBrowser.Integration.Files,
                  Language.Haskell.ASBrowser.Integration.CabalTest,
                  Language.Haskell.ASBrowser.Integration.FilesTest,
                  Language.Haskell.ASBrowser.TypesTest,
                  Language.Haskell.ASBrowser.Operations.Components,
                  Language.Haskell.ASBrowser.Operations.ComponentsTest,
                  Language.Haskell.AsBrowser
  hs-source-dirs:  
                  test,
                  src

test-suite as-browser-integration
  type:            exitcode-stdio-1.0
  main-is:         as-browser-integration.hs
  ghc-options:     -Wall -rtsopts -threaded -O2
  build-depends:   
                   base >= 4,
                   tasty > 0.10,
                   tasty-hunit,
                   HUnit,
                   directory,
                   filepath,
                   Cabal,
                   safecopy,
                   acid-state,
                   ixset,
                   text,
                   time,
                   data-default,
                   conduit,
                   conduit-extra,
                   http-conduit,
                   bytestring,
                   mtl,
                   zlib,
                   tar,
                   utf8-string,
                   parallel-io,
                   containers,
                   aeson
  other-modules:   
                  Language.Haskell.ASBrowser.Operations.Packages,
                  Language.Haskell.ASBrowser.Utils,
                  Language.Haskell.ASBrowser.Database,
                  Language.Haskell.ASBrowser.Operations.Modules,
                  Language.Haskell.ASBrowser.Integration.Cabal,
                  Language.Haskell.ASBrowser.Integration.Files,
                  Language.Haskell.ASBrowser.Integration.CabalTest,
                  Language.Haskell.ASBrowser.TestHarness,
                  Language.Haskell.ASBrowser.Operations.Components,
                  Language.Haskell.AsBrowser
  hs-source-dirs:  
                  src,
                  integration

