name: as-browser
version: 0.1
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
author: jpmoresmau
data-files:
    resources/bower_components/core-component-page/bowager-logo.png
    resources/bower_components/core-component-page/bower.json
    resources/bower_components/core-component-page/core-component-page.html
    resources/bower_components/core-component-page/demo.html
    resources/bower_components/core-component-page/index.html
    resources/bower_components/core-component-page/README.md
    resources/bower_components/polymer/bower.json
    resources/bower_components/polymer/build.log
    resources/bower_components/polymer/layout.html
    resources/bower_components/polymer/polymer.html
    resources/bower_components/polymer/polymer.js
    resources/bower_components/polymer/polymer.min.js
    resources/bower_components/polymer/README.md
    resources/bower_components/webcomponentsjs/bower.json
    resources/bower_components/webcomponentsjs/build.log
    resources/bower_components/webcomponentsjs/CustomElements.js
    resources/bower_components/webcomponentsjs/CustomElements.min.js
    resources/bower_components/webcomponentsjs/HTMLImports.js
    resources/bower_components/webcomponentsjs/HTMLImports.min.js
    resources/bower_components/webcomponentsjs/package.json
    resources/bower_components/webcomponentsjs/README.md
    resources/bower_components/webcomponentsjs/ShadowDOM.js
    resources/bower_components/webcomponentsjs/ShadowDOM.min.js
    resources/bower_components/webcomponentsjs/webcomponents-lite.js
    resources/bower_components/webcomponentsjs/webcomponents-lite.min.js
    resources/bower_components/webcomponentsjs/webcomponents.js
    resources/bower_components/webcomponentsjs/webcomponents.min.js
    resources/bower.json

library
    exposed-modules:
        Language.Haskell.AsBrowser
    build-depends:
        base >=4,
        directory -any,
        filepath -any,
        safecopy -any,
        acid-state -any,
        ixset-typed -any,
        text -any,
        Cabal -any,
        time -any,
        data-default -any,
        mtl -any,
        conduit -any,
        conduit-extra -any,
        http-conduit -any,
        bytestring -any,
        zlib -any,
        tar -any,
        utf8-string -any,
        parallel-io -any,
        containers -any,
        aeson -any,
        network-uri -any,
        xml-conduit -any,
        html-conduit -any,
        blaze-html -any,
        transformers -any,
        pretty
    hs-source-dirs: src
    other-modules:
        Language.Haskell.ASBrowser.Operations.Decls
        Language.Haskell.ASBrowser.Types
        Language.Haskell.ASBrowser.Operations.Packages
        Language.Haskell.ASBrowser.Utils
        Language.Haskell.ASBrowser.Database
        Language.Haskell.ASBrowser.Operations.Modules
        Language.Haskell.ASBrowser.Integration.Cabal
        Language.Haskell.ASBrowser.Integration.Files
        Language.Haskell.ASBrowser.Operations.Components
        Language.Haskell.ASBrowser.Integration.Src
    ghc-options: -Wall -O2

executable as-browser
    main-is: Main.hs
    build-depends:
        base >=4,
        as-browser -any,
        directory -any,
        filepath -any,
        safecopy -any,
        acid-state -any,
        ixset-typed -any,
        text -any,
        Cabal -any,
        time -any,
        data-default -any,
        mtl -any,
        conduit -any,
        conduit-extra -any,
        http-conduit -any,
        bytestring -any,
        zlib -any,
        tar -any,
        utf8-string -any,
        parallel-io -any,
        containers -any,
        aeson -any,
        warp,
        scotty,
        wai-handler-launch,
        wai-middleware-static,
        wai-extra,
        transformers -any,
        network-uri -any,
        xml-conduit -any,
        html-conduit -any,
        blaze-html -any,
        attoparsec -any,
        pretty
    hs-source-dirs: exe
    ghc-options: -Wall -rtsopts -threaded -O2

test-suite as-browser-test
    type: exitcode-stdio-1.0
    main-is: as-browser-test.hs
    build-depends:
        base >=4,
        tasty >0.10,
        tasty-hunit -any,
        tasty-quickcheck -any,
        QuickCheck -any,
        quickcheck-instances -any,
        HUnit -any,
        Cabal -any,
        acid-state -any,
        ixset-typed -any,
        safecopy -any,
        text -any,
        time -any,
        data-default -any,
        directory -any,
        filepath -any,
        conduit -any,
        conduit-extra -any,
        http-conduit -any,
        bytestring -any,
        mtl -any,
        zlib -any,
        tar -any,
        utf8-string -any,
        parallel-io -any,
        containers -any,
        aeson -any,
        attoparsec -any,
        network-uri -any,
        xml-conduit -any,
        html-conduit -any,
        blaze-html -any,
        pretty
    hs-source-dirs: test src
    other-modules:
        Language.Haskell.ASBrowser.Operations.Decls
         Language.Haskell.ASBrowser.Operations.DeclsTest
        Language.Haskell.ASBrowser.Operations.Packages
        Language.Haskell.ASBrowser.Operations.PackagesTest
        Language.Haskell.ASBrowser.Utils
        Language.Haskell.ASBrowser.UtilsTest
        Language.Haskell.ASBrowser.Database
        Language.Haskell.ASBrowser.Operations.Modules
        Language.Haskell.ASBrowser.Operations.ModulesTest
        Language.Haskell.ASBrowser.Integration.Cabal
        Language.Haskell.ASBrowser.Integration.Files
        Language.Haskell.ASBrowser.Integration.CabalTest
        Language.Haskell.ASBrowser.Integration.FilesTest
        Language.Haskell.ASBrowser.TypesTest
        Language.Haskell.ASBrowser.Operations.Components
        Language.Haskell.ASBrowser.Operations.ComponentsTest
        Language.Haskell.AsBrowser
        Language.Haskell.ASBrowser.Integration.Src
        Language.Haskell.ASBrowser.Integration.SrcTest
    ghc-options: -Wall -rtsopts -threaded -O2
test-suite as-browser-integration
    type: exitcode-stdio-1.0
    main-is: as-browser-integration.hs
    build-depends:
        base >=4,
        tasty >0.10,
        tasty-hunit -any,
        HUnit -any,
        directory -any,
        filepath -any,
        Cabal -any,
        safecopy -any,
        acid-state -any,
        ixset-typed -any,
        text -any,
        time -any,
        data-default -any,
        conduit -any,
        conduit-extra -any,
        http-conduit -any,
        bytestring -any,
        mtl -any,
        zlib -any,
        tar -any,
        utf8-string -any,
        parallel-io -any,
        containers -any,
        aeson -any,
        network-uri -any,
        xml-conduit -any,
        html-conduit -any,
        blaze-html -any,
        pretty
    hs-source-dirs: src integration
    other-modules:
        Language.Haskell.ASBrowser.Operations.Decls
        Language.Haskell.ASBrowser.Operations.Packages
        Language.Haskell.ASBrowser.Utils
        Language.Haskell.ASBrowser.Database
        Language.Haskell.ASBrowser.Operations.Modules
        Language.Haskell.ASBrowser.Integration.Cabal
        Language.Haskell.ASBrowser.Integration.Files
        Language.Haskell.ASBrowser.Integration.CabalTest
        Language.Haskell.ASBrowser.TestHarness
        Language.Haskell.ASBrowser.Operations.Components
        Language.Haskell.AsBrowser
        Language.Haskell.ASBrowser.Integration.Src
    ghc-options: -Wall -rtsopts -threaded -O2
