name:           ghci-lib
version:        0.1
cabal-version:  >=1.8
build-type:     Simple
author:         JP Moresmau <jp@moresmau.fr>, Neil Mitchell <ndmitchell@gmail.com>
maintainer:     JP Moresmau <jp@moresmau.fr>
license:        BSD3
copyright:      Neil Mitchell and JP Moresmau, 2014
license-file:   LICENSE

library
  hs-source-dirs:  src
  build-depends:   
        base >= 4,
        filepath,
        time,
        directory,
        process >= 1.1
  ghc-options:     -Wall
  other-modules:   
                   Language.Haskell.Ghci.Types,
                   Language.Haskell.Ghci.Parser,
                   Language.Haskell.Ghci.Utils
  exposed-modules: Language.Haskell.GhciLib

test-suite ghci_lib_test
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall -rtsopts
  build-depends:   
    base >= 4,
    filepath,
    time,
    directory,
    process,
    tasty,
    tasty-hunit
  hs-source-dirs:  test, src
  main-is:         ghci_lib_test.hs
  other-modules:   
                   Language.Haskell.Ghci.ParserTest,
                   Language.Haskell.Ghci.HighLevelTests,
                   Language.Haskell.Ghci.Utils,
                   Language.Haskell.Ghci.UtilsTest

