name:           hwide
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jpmoresmau
Data-dir:       .
Data-files:     wwwroot/css/*.css
                wwwroot/img/*.png
                wwwroot/js/*.js
                wwwroot/index.html

executable hwide
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   threepenny-gui >=0.4.2.1 && <0.5,
                   directory >=1.2.1 && <1.3,
                   filepath >=1.3.0 && <1.4,
                   text >=1.1.1 && <1.2,
                   bytestring >=0.10.4 && <0.11,
                   containers >=0.5.5 && <0.6,
                   yaml >= 0.8.9 && < 0.9,
                   data-default >=0.5.3 && <0.6
  ghc-options:     -Wall -fno-warn-unused-do-bind -threaded -with-rtsopts=-N
  other-modules:   
                   Language.Haskell.HWide.Util,
                   Language.Haskell.HWide.UI.PopupPane,
                   Language.Haskell.HWide.UI.FileList,
                   Language.Haskell.HWide.UI.FileBrowser,
                   Language.Haskell.HWide.UI.UIUtils,
                   Language.Haskell.HWide.Config
