name:           hwide
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         jpmoresmau
Data-dir:       .
Data-files:     
                wwwroot/css/*.css
                wwwroot/img/*.png
                wwwroot/js/*.js
                wwwroot/index.html

library 
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   threepenny-gui >=0.4.2.1 && <0.5,
                   directory >=1.2.1 && <1.3,
                   filepath >=1.3.0 && <1.4,
                   text >=1.1.1 && <1.2,
                   bytestring >=0.10.4 && <0.11,
                   containers >=0.5.5 && <0.6,
                   yaml >= 0.8.9 && < 0.9,
                   data-default >=0.5.3 && <0.6,
                   hashable >=1.2.2 && <1.3,
                   process >=1.2.0 && <1.3,
                   mime-types >= 0.1.0.4 && < 0.2,
                   regex-tdfa
  ghc-options:     -Wall -fno-warn-unused-do-bind
  exposed-modules: 
                   Language.Haskell.HWide.Cabal,
                   Language.Haskell.HWide.Cache,
                   Language.Haskell.HWide.Config,
                   Language.Haskell.HWide.Internal.UniqueQueue,
                   Language.Haskell.HWide.Notes,
                   Language.Haskell.HWide.UI.FileBrowser,
                   Language.Haskell.HWide.UI.FileList,
                   Language.Haskell.HWide.UI.PopupPane,
                   Language.Haskell.HWide.UI.UIUtils,
                   Language.Haskell.HWide.Util

executable hwide
  hs-source-dirs:  exe
  main-is:         Main.hs
  build-depends:   
                   hwide,
                   base >= 4,
                   threepenny-gui >=0.4.2.1 && <0.5,
                   directory >=1.2.1 && <1.3,
                   filepath >=1.3.0 && <1.4,
                   text >=1.1.1 && <1.2,
                   bytestring >=0.10.4 && <0.11,
                   containers >=0.5.5 && <0.6,
                   yaml >= 0.8.9 && < 0.9,
                   data-default >=0.5.3 && <0.6,
                   hashable >=1.2.2 && <1.3,
                   process >=1.2.0 && <1.3,
                   mime-types >= 0.1.0.4 && < 0.2,
                   regex-tdfa
  ghc-options:     -Wall -fno-warn-unused-do-bind -threaded -with-rtsopts=-N

