name:           hwide
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         jpmoresmau
Data-dir:       .
Data-files:     
                wwwroot/css/*.css
                wwwroot/img/*.png
                wwwroot/js/*.js
                wwwroot/index.html

library 
  hs-source-dirs:   src
  build-depends:    
                   base >= 4,
                   threepenny-gui >=0.5,
                   directory,
                   filepath,
                   text,
                   bytestring,
                   containers,
                   yaml,
                   data-default,
                   hashable,
                   process,
                   mime-types,
                   regex-tdfa
  ghc-options:      -Wall -fno-warn-unused-do-bind
  exposed-modules:  
                   Language.Haskell.HWide.Cabal,
                   Language.Haskell.HWide.Cache,
                   Language.Haskell.HWide.Config,
                   Language.Haskell.HWide.Internal.UniqueQueue,
                   Language.Haskell.HWide.Notes,
                   Language.Haskell.HWide.UI.FileBrowser,
                   Language.Haskell.HWide.UI.FileList,
                   Language.Haskell.HWide.UI.PopupPane,
                   Language.Haskell.HWide.UI.UIUtils,
                   Language.Haskell.HWide.Util,
                   Language.Haskell.HWide.UI.NoteList

executable hwide
  hs-source-dirs:  exe
  main-is:         Main.hs
  build-depends:   
                   hwide,
                   base >= 4,
                   threepenny-gui >0.5,
                   directory,
                   filepath,
                   text,
                   bytestring,
                   containers,
                   yaml,
                   data-default,
                   hashable,
                   process,
                   mime-types,
                   regex-tdfa
  ghc-options:     -Wall -fno-warn-unused-do-bind -threaded -with-rtsopts=-N

test-suite hwide-test
  type:            exitcode-stdio-1.0
  main-is:         hwide-test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, 
                   HTF > 0.9,
                   hwide,
                   HUnit,
                   directory,
                   filepath,
                   threepenny-gui
  hs-source-dirs:  test
  other-modules:   
                   Language.Haskell.HWide.CabalTest,
                   Language.Haskell.HWide.TestUtil

    
 
  
  
  
 
